# PZS

./: .gitignore  jupyter2.ipynb  pyproject.toml  requirements.txt  rozrazeni_hlasu.ipynb
app/: 2.ipynb  __main__.py  classification_results.csv  classification_results_with_comparison.csv  jupyter.ipynb
app/I/: 11.ipynb  12.ipynb  alg_real_bpm.py  analyza_bpm.ipynb  anomalie.ipynb  bpm_porovnani.ipynb  komplexni_analyza_ekg.ipynb  vsechny_bpm.ipynb
app/II/: 03.ipynb  2.ipynb  analyza.ipynb  classification_results.csv  jupyter.ipynb  komplet.ipynb  rozrazeni_hlasu.ipynb
