[tool.poetry]
name = "pzs"
version = "0.1.0"
description = ""
authors = ["marek.tremel <tremelmarek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wfdb = "^4.1.2"
python-speech-features = "^0.6"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
